2021-04-10  7.0.11-7  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-7 GIT revision 18617:2a0925961:20210411

2021-04-09  7.0.11-7  <quetzlzacatenango@image...>
  * constrain sub-image list.
  * -layers optimize no longer produces broken output (reference
    https://github.com/ImageMagick/ImageMagick/issues/3520).

2021-04-03  7.0.11-6  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-6 GIT revision 18588:ea711b44c:20210403

2021-04-01  7.0.11-6  Dirk Lemstra <dirk@lem.....org>
  * fix portable Windows build.

2021-03-28  7.0.11-5  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-5 GIT revision 18569:b934dca6b:20210328

2021-03-25  7.0.11-5  Dirk Lemstra <dirk@lem.....org>
  * OpenCL will be disable by default, use the environment variable
    MAGICK_OCL_DEVICE to turn it on or select the device to use.

2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
  * eliminate extraneous spaces in AC_PATH_PROG (reference
    https://github.com/ImageMagick/ImageMagick/issues/3428).
  * fix handling of non-square images with -fft option.
  * enable FFTW support with --with-fftw configure script command-line option.

2021-03-20  7.0.11-4  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-4 GIT revision 18551:474c73cba:20210320

2021-03-13  7.0.11-4  <quetzlzacatenango@image...>
  * support caption:split define (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3389).
  * avoid an omp deadlock with policy string

2021-03-06  7.0.11-3  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-3 GIT revision 18521:10079791f:20210306

2021-03-02  7.0.11-3  <quetzlzacatenango@image...>
  * Eliminate multiple division by zero exceptions (reference
    https://github.com/ImageMagick/ImageMagick/issues/3339 and others).
  * Use -define filename:literal=true to bypass interpretting embedded
    formatting characters and instead use the filename literally.
