@@ -1,3 +1,7 @@
+2021-04-17  7.0.11-8  Dirk Lemstra <dirk@lem.....org>
+  * added support for pdf:author, pdf:producer and pdf:title when writing a
+    PDF file.
+
 2021-04-10  7.0.11-7  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.11-7 GIT revision 18617:2a0925961:20210411
 
